Fixed: changed the footer on the mobile version. Fixed: _tablet.scss changed my test font-size to smaller so it will fit into tablet mode, The game description I moved so it would be more to the center. The footer I will have to take a look more into because of the width. I wanted the container with the buttons to become a special height and width so it wont overflow. Made the big containers have a max-height of 1000px. In progress: I need to look more into the buttons in the ShopUpgrade because they dont behave like I want them to be.

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -152,11 +152,14 @@ p.shop-description{
     padding-top: 20px;
     padding-bottom: 10px;
 }
+    
+    
+/* Footer */
 
     
 .footer-contact-info{
     background-color: aqua;
-    width: 100%;
+    width: 110%;
     height: auto;
     margin: 0;
     padding: 1.2em;
@@ -164,7 +167,9 @@ p.shop-description{
     position: relative;
     z-index: 1;
     margin-top: 20px;
+    margin-left: -15px;
 }
+
 
 } /* end media 375px mobile */
 
